[package]
name = "test-projfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
ctrlc = "3.2.1"
widestring = "0.5.1"
lazy_static = "1.4.0"

[dependencies.windows]
version = "0.34.0"
features = [
    "Win32_Foundation",
    "Win32_Storage_ProjectedFileSystem",
    "Win32_System_SystemInformation",
]